[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-ctx"
version = "0.1.0"
description = "A lightweight CLI tool to automatically extract and copy context-aware code snippets from your project directory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.13.1",
    "openai>=1.101.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
snap-ctx = "main:main"

[tool.setuptools]
py-modules = ["main", "snap_ctx_mcp"]
packages = ["config", "utils"]

[tool.setuptools.package-data]
config = ["models.example.yaml"]